--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dompurify": "^3.0.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "new-component": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "new-component": "new-component"
   },
   "eslintConfig": {
     "extends": [
